--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ForgotPassword.cshtml
@@ -19,7 +19,7 @@
             <button type="submit" class="btn button w-100 bg-white">Reset my Password</button>
         </form>
         <a asp-controller="User" asp-action="Login" class="fw-light text-14 color-darkgray">Login</a>
-        <a href="#" class="fw-light color-darkgray privacy-policy text-14">Privacy Policy</a>
+        <a asp-action="Privacy" class="fw-light color-darkgray privacy-policy text-14">Privacy Policy</a>
     </section>
 </main>
 
