--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ResetPassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/ResetPassword.cshtml
@@ -6,17 +6,25 @@
     <partial name="_HeroSectionCarousel" model="@Model.bannerVMs"></partial>
     <section class="right-section d-flex flex-column gap-3 justify-content-center align-items-center p-5 p-lg-5">
         <div class="color-darkgray forgot-password-title">New Password</div>
-        <div class="color-darkgray fw-light text-14 forgot-password-description text-center">Please enter a new
-            password in the fields below.</div>
+        <div class="color-darkgray fw-light text-14 forgot-password-description text-center">
+            Please enter a new
+            password in the fields below.
+        </div>
         <form class="d-grid gap-4 mt-2" method="post" id="ResetForm" asp-route="ResetPasswordPost">
             <div>
                 <label asp-for="Password" class="fw-light"></label>
-                <input type="password" class="form-control" asp-for="Password" id="Password" autofocus>
+                <div class="position-relative">
+                    <input type="password" class="form-control pe-4" asp-for="Password" id="Password" autofocus>
+                    <img src="/images/static/eye.png" alt="eye" class="password-eye cursor-pointer" />
+                </div>
                 <span asp-validation-for="Password" class="text-danger text-14"></span>
             </div>
             <div>
                 <label asp-for="ConfirmPassword" class="fw-light"></label>
-                <input type="password" asp-for="ConfirmPassword" class="form-control" id="ConfirmPassword">
+                <div class="position-relative">
+                    <input type="password" asp-for="ConfirmPassword" class="form-control pe-5" id="ConfirmPassword">
+                    <img src="/images/static/eye.png" alt="eye" class="password-eye cursor-pointer" />
+                </div>
                 <span asp-validation-for="ConfirmPassword" class="text-danger text-14"></span>
                 <span id="ConfirmPasswordError" class="text-danger text-14"></span>
             </div>
@@ -25,36 +33,37 @@
             <button type="submit" class="btn button w-100 bg-white">Change Password</button>
         </form>
         <a asp-controller="User" asp-action="Login" class="fw-light text-14 color-darkgray">Login</a>
-        <a href="#" class="fw-light color-darkgray privacy-policy text-14">Privacy Policy</a>
+        <a asp-action="Privacy" class="fw-light color-darkgray privacy-policy text-14">Privacy Policy</a>
     </section>
 </main>
 @section Scripts{
-    <partial name="_ValidationScriptsPartial.cshtml"></partial>
-    <script>
-        const ConfirmPassword = document.querySelector("#ConfirmPassword");
-        const Password = document.querySelector("#Password");
-        const ResetForm = document.querySelector("#ResetForm");
-        
-        const ConfirmPasswordError = document.querySelector("#ConfirmPasswordError");
+<partial name="_ValidationScriptsPartial.cshtml"></partial>
+<script src="/js/passwordEye.js"></script>
+<script>
+    const ConfirmPassword = document.querySelector("#ConfirmPassword");
+    const Password = document.querySelector("#Password");
+    const ResetForm = document.querySelector("#ResetForm");
 
-        ConfirmPassword.addEventListener('input', ()=>{
-            if(Password.value != ConfirmPassword.value)
-                ConfirmPasswordError.textContent = "Confirm password must be same as password."
-            else
-                ConfirmPasswordError.textContent = '';
-        })
-        
-        ResetForm.addEventListener('submit', (e)=>{
-            e.preventDefault();
-            if(ConfirmPassword.value == null || ConfirmPassword.value == "")
-                return;
-            if(Password.value == null || Password.value == "")
-                return;
-            if(ConfirmPassword.value != Password.value){
-                ConfirmPasswordError.textContent = "Confirm password must be same as password."
-                return;
-            }
-            ResetForm.submit();
-        })
-    </script>
+    const ConfirmPasswordError = document.querySelector("#ConfirmPasswordError");
+
+    ConfirmPassword.addEventListener('input', ()=>{
+        if(Password.value != ConfirmPassword.value)
+            ConfirmPasswordError.textContent = "Confirm password must be same as password."
+        else
+            ConfirmPasswordError.textContent = '';
+    })
+
+    ResetForm.addEventListener('submit', (e)=>{
+        e.preventDefault();
+        if(ConfirmPassword.value == null || ConfirmPassword.value == "")
+            return;
+        if(Password.value == null || Password.value == "")
+            return;
+        if(ConfirmPassword.value != Password.value){
+            ConfirmPasswordError.textContent = "Confirm password must be same as password."
+            return;
+        }
+        ResetForm.submit();
+    })
+</script>
 }
