--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/UserProfile.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/UserProfile.cshtml
@@ -233,4 +233,5 @@
 @section Scripts{
 <partial name="_ValidationScriptsPartial.cshtml"></partial>
 <script src="~/js/userProfile.js"></script>
+<script src="/js/passwordEye.js"></script>
 }
