--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_ChangePassword.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_ChangePassword.cshtml
@@ -9,27 +9,36 @@
             <div class="modal-body d-grid gap-2 color-darkgray">
                 <div>
                     <label for="oldPassword">Old Password</label>
-                    <input type="text" class="form-control" id="oldPassword"
-                           placeholder="Enter old password" />
+                    <div class="position-relative">
+                        <input type="password" class="form-control" id="oldPassword"
+                               placeholder="Enter old password" />
+                        <img src="/images/static/eye.png" alt="eye" class="password-eye cursor-pointer" />
+                    </div>
                     <span class="text-danger text-14" id="oldPasswordError"></span>
                 </div>
                 <div>
                     <label for="newPassword">New Password</label>
-                    <input type="text" class="form-control" id="newPassword"
-                           placeholder="Enter new password" />
+                    <div class="position-relative">
+                        <input type="password" class="form-control" id="newPassword"
+                               placeholder="Enter new password" />
+                        <img src="/images/static/eye.png" alt="eye" class="password-eye cursor-pointer" />
+                    </div>
                     <span class="text-danger text-14" id="newPasswordError"></span>
                 </div>
                 <div>
                     <label for="confirmPassword">Confirm Password</label>
-                    <input type="text" class="form-control" id="confirmPassword"
-                           placeholder="Enter confirm password" />
+                    <div class="position-relative">
+                        <input type="password" class="form-control" id="confirmPassword"
+                               placeholder="Enter confirm password" />
+                        <img src="/images/static/eye.png" alt="eye" class="password-eye cursor-pointer" />
+                    </div>
                     <span class="text-danger text-14" id="confirmPasswordError"></span>
 
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn button-dark px-4" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn button px-4" id="savePasswordBtn">Save changes</button>
+                <button type="button" class="btn button px-4" id="savePasswordBtn">Update Password</button>
             </div>
         </div>
     </div>
