--- a/MVC/CI-Platform/CI-PlatformWeb/Views/Shared/Error.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/Shared/Error.cshtml
@@ -3,23 +3,32 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<main class="container d-flex flex-column align-items-center justify-align-content-center">
 
-@if (Model.ShowRequestId)
-{
+    @*<h1 class="text-danger">Error.</h1>
+    <h2 class="text-danger">An error occurred while processing your request.</h2>
+
+    @if (Model.ShowRequestId)
+    {
+        <p>
+            <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        </p>
+    }*@
+    <img src="~/images/static/404-Page-image.png" alt="error" />
+    <div class="mt-5 text-center">
+        <h4 class="text-danger">The page you are looking for doesn't exists.</h4>
+        <a asp-action="Index" asp-controller="Home" asp-area="Volunteer" class="btn button-plain mt-3">Go To Homepage</a>
+    </div>
+</main>
+
+@*<h3>Development Mode</h3>
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
     Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
+    </p>
+    <p>
     <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
     It can result in displaying sensitive information from exceptions to end users.
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
-</p>
+    </p>
+*@
