--- a/MVC/CI-Platform/CI-PlatformWeb/wwwroot/css/style.css
+++ b/MVC/CI-Platform/CI-PlatformWeb/wwwroot/css/style.css
@@ -148,6 +148,13 @@ form input:focus {
         box-shadow: 0 5px 5px darkgray;
     }
 /* login page css */
+.password-eye {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    padding: 5px;
+}
 .carousel {
     height: 70vh;
 }
