refactoring some code

--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
             <div class="dropdown flex-shrink-0">
                 <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
                         type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src='/images/static/user-img.png' alt="profile" class="rounded-circle object-fit-cover"
+                    <img src='@avatar' alt="profile" class="rounded-circle object-fit-cover"
                          width="40px" height="40px">
                     <span class="d-none d-md-inline">@firstName @lastName</span>
                     <img src="/images/static/drop-down.png" alt="drop-down">
