--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IndexHeaderVM
 @{
     ViewData["Title"] = "Home Page";
-    var profileSuccess = ViewBag?.ProfileSuccess;
-    var registered = ViewBag?.Registered;
+    var profileSuccess = TempData["ProfileSuccess"];
+    var registered = TempData["Registered"];
     var userId = Context.Session.GetString("UserId");
 }
 <input hidden value="@profileSuccess" id="profileSuccess" />
