--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Mission/_Mission.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Mission/_Mission.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CI_Platform.Entities.Constants
 @model IEnumerable<AdminMissionVM>
 <div class="border-bottom mb-4">
-    <h4 class="border-bottom border-dark width-max-conatent m-0 pb-3 pe-2">Goal Timesheet</h4>
+    <h4 class="border-bottom border-dark width-max-conatent m-0 pb-3 pe-2">Missions</h4>
 </div>
 <div class="d-flex justify-content-between align-items-center mb-4 gap-2 flex-wrap">
     <div class="flex-grow-1 d-flex gap-1 align-items-center adminSearchContainer">
@@ -83,7 +83,7 @@
                     }
                     <td>
                         <div class="width-max-conatent">
-                            @if (@m.MissionType == MissionType.TIME && m.EndDate > DateTime.Now && m.Status == true)
+                            @if (@m.MissionType == MissionType.TIME && m.EndDate < DateTime.Now && m.Status == true)
                             {
                                 <img src="/images/static/stop-circle.svg"
                                 class="cursor-pointer d-inline width-max-conatent me-2" alt="edit"
