notification under progress

--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Home/Index.cshtml
@@ -69,6 +69,10 @@
             <img src="/images/static/bookmark-star-white.svg" alt="user" height="20px" width="20px">
             Story
         </div>
+        <div data-item="comment" class="d-flex gap-2 align-items-center p-3 rounded-1 cursor-pointer">
+            <img src="/images/static/chat-quote.svg" alt="user" height="20px" width="20px">
+            Comment
+        </div>
         <div data-item="banner" class="d-flex gap-2 align-items-center p-3 rounded-1 cursor-pointer">
             <img src="/images/static/image-white.svg" alt="user" height="20px" width="20px">
             Banner Management
